# rs-audio-engine

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
audio-engine-common/: Cargo.toml
audio-engine-common/examples/morph-shapes/: main.rs
audio-engine-common/src/: beats_per_minute.rs  convolve.rs  duration.rs  id.rs  level.rs  lib.rs  note_duration.rs  note_time.rs  phase_time.rs  song_time.rs  waveform.rs
audio-engine-common/src/buffer/: mod.rs  ring_buffer.rs
audio-engine-common/src/digital_sound/: benchmark.rs  mod.rs  parameters.rs  sound.rs  sound_state.rs
audio-engine-common/src/envelope/: mod.rs  (+5 more)
audio-engine-discrete-time/: Cargo.toml
audio-engine-discrete-time/doc/: calc.md
audio-engine-discrete-time/src/: component.rs  components.rs  filter.rs  lib.rs  transfer_function.rs  transfer_function_test.rs
audio-engine-effect/: Cargo.toml
audio-engine-effect-delay/: Cargo.toml
audio-engine-effect-delay/src/: delay.rs  delay_state.rs  lib.rs
audio-engine-effect-distortion/: Cargo.toml
audio-engine-effect-distortion/src/: distortion.rs  distortion_state.rs  lib.rs
audio-engine-effect/src/: effect.rs  effect_state.rs  lib.rs
audio-engine-export-video/: Cargo.toml
audio-engine-export-video/examples/export-c4/: main.rs
audio-engine-export-video/examples/export-histogram/: main.rs
audio-engine-export-video/examples/export-instrument-test/: main.rs
audio-engine-export-video/examples/export-song1/: main.rs
audio-engine-export-video/src/: export.rs  histogram.rs  lib.rs  render_context.rs  types.rs  waveform.rs
audio-engine-fm/: Cargo.toml
audio-engine-fm/src/: algorithm.rs  envelope.rs  instrument.rs  lib.rs  operator.rs  operator_frequency.rs  waveform.rs
audio-engine-fourier/: Cargo.toml
audio-engine-fourier/src/: complex_number.rs  fourier_series.rs  lib.rs  parameters.rs  test.rs  to_frequency_domain.rs  to_time_domain.rs
audio-engine-instrument-bowed-string/: Cargo.toml
audio-engine-instrument-bowed-string/examples/bench-bowed-string/: main.rs
audio-engine-instrument-bowed-string/src/: bow.rs  damping.rs  eigen_frequencies.rs  hand.rs  instrument.rs  instrument_state.rs  lib.rs  modal_processor.rs  nemus_processor.rs  nemus_try_processor.rs  processor.rs  sherman_morrison_processor.rs  string.rs  string_and_hand.rs  string_processor.rs  test.rs
audio-engine-instrument-bowed-string/src/friction/: bilboa.rs  desvages.rs  mod.rs
audio-engine-instrument-bowed-string/src/processor/: mod.rs  modal.rs  modal_optimized.rs  modal_var1.rs  test.rs
audio-engine-instrument-fm/: Cargo.toml
audio-engine-instrument-fm/examples/experiment/: main.rs
audio-engine-instrument-fm/src/: algorithm.rs  algorithm_compiled.rs  instrument.rs  lib.rs  operator.rs
audio-engine-instrument-fm/src/algorithm/: compiled.rs  execution_step.rs  mod.rs  preset.rs
audio-engine-instrument-fm/src/algorithm/preset/: basic.rs  builder.rs  dx7.rs  mod.rs
audio-engine-instrument-piano/: Cargo.toml
audio-engine-instrument-piano/src/: instrument.rs  instrument2.rs  lib.rs  note_state.rs  note_state2.rs
audio-engine-instrument-piano/src/piano/: delay.rs  filter.rs  hammer.rs  mod.rs  reverb.rs  string.rs  test.rs
audio-engine-instrument-piano/src/piano2/: mod.rs  piano_ir.rs  piano_note.rs  piano_string.rs  string_group_configuration.rs  test.rs
audio-engine-instrument-sample/: Cargo.toml
audio-engine-instrument-sample/src/: sample.rs  sample_note_state.rs
audio-engine-instruments/: Cargo.toml
audio-engine-instruments/src/: lib.rs
audio-engine-instruments/src/bowed_string/: cello.rs  mod.rs  violin.rs
audio-engine-instruments/src/fm/: mod.rs
audio-engine-instruments/src/fm/basic/: harmonic.rs  mod.rs  saw_ramp_down.rs  saw_ramp_up.rs  sine.rs  square.rs  triangle.rs
audio-engine-instruments/src/fm/wip/: mod.rs
audio-engine-instruments/src/piano/: mod.rs
audio-engine-instruments/src/sample/: mod.rs  piano.rs
audio-engine-instruments/src/sample/pianos/: piano_ax.rs
audio-engine-instruments/src/samples/: mod.rs  piano_ax.rs
audio-engine-midinous/: Cargo.toml
audio-engine-midinous-songs/: Cargo.toml
audio-engine-midinous-songs/examples/metronome/: main.rs
audio-engine-midinous-songs/src/: lib.rs  metronome.rs
audio-engine-midinous/src/: builder.rs  builder_link.rs  builder_node.rs  builder_song.rs  lib.rs  link.rs  link_index.rs  link_path.rs  link_selection.rs  link_state.rs  node.rs  node_index.rs  node_state.rs  player.rs  song.rs  song_state.rs  traveler.rs
audio-engine-notes/: Cargo.toml
audio-engine-notes/src/: lib.rs  note.rs  octave.rs  pitch.rs  scale.rs  tone.rs
audio-engine-player/: Cargo.toml
audio-engine-player/src/: render.rs
audio-engine-sample/: Cargo.toml
audio-engine-sample/src/: lib.rs  sample.rs  sample_note_state.rs
audio-engine-sequencer/: Cargo.toml
audio-engine-sequencer/src/: instrument.rs  instrument_index.rs  instrument_note_state.rs  lib.rs  note.rs
audio-engine-tracker/: Cargo.toml
audio-engine-tracker-songs/: Cargo.toml
audio-engine-tracker-songs/examples/c4/: main.rs
audio-engine-tracker-songs/examples/instrument-test/: main.rs
audio-engine-tracker-songs/examples/song1/: main.rs
audio-engine-tracker-songs/examples/song2/: main.rs
audio-engine-tracker-songs/src/: lib.rs
audio-engine-tracker-songs/src/songs/: c4.rs  instrument_test.rs  mod.rs  song1.rs  song2.rs
audio-engine-tracker/examples/song1/: main.rs
audio-engine-tracker/examples/track-with-delay/: main.rs
audio-engine-tracker/examples/track-with-distortion/: main.rs
audio-engine-tracker/src/: bars_per_beat.rs  event.rs  lib.rs  pattern.rs  pattern_state.rs  phrase.rs  phrase_state.rs  row.rs  song.rs  song_state.rs  track.rs  track_state.rs  tracker.rs
docs/: instrument-model.md
examples/experiment/: main.rs
src/: algorithm.rs  envelope.rs  instrument.rs  lib.rs  operator.rs  sample.rs
tools/sample2fm/: Cargo.toml
tools/sample2fm/src/: main.rs
tools/tuner/: Cargo.toml
tools/tuner/src/: arguments.rs  main.rs  tuner.rs
tools/wav2f32/: Cargo.toml
tools/wav2rs/: Cargo.toml
(+18 files in other folders)
