
[workspace]
members = [
    "audio-engine-common",
    "audio-engine-notes",

    "audio-engine-instrument-fm",
    "audio-engine-instrument-sample",
    "audio-engine-instruments",

    "audio-engine-effect",
    "audio-engine-effect-delay",

    "audio-engine-sequencer",
    "audio-engine-tracker",
    "audio-engine-player",
]

resolver = "2"

[profile.dev]
lto = false

[profile.release]
lto = true
