
[workspace]
members = [
    "audio-engine-common",
    "audio-engine-notes",

    "audio-engine-instrument-fm",
    "audio-engine-instrument-sample",
    "audio-engine-instruments",

    "audio-engine-effect",
    "audio-engine-effect-delay",
    "audio-engine-effect-distortion",

    "audio-engine-sequencer",
    "audio-engine-tracker",
    "audio-engine-tracker-songs",
    "audio-engine-player",

    "audio-engine-export-video",
]

resolver = "2"

[profile.dev]
lto = false

[profile.release]
lto = true
