[package]
name = "audio-engine-effect-distortion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-engine-common = {path="../audio-engine-common"}
audio-engine-effect = {path="../audio-engine-effect"}
