[package]
name = "audio-engine-export-video"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-engine-common = {path="../audio-engine-common"}
audio-engine-fourier = {path="../audio-engine-fourier"}
audio-engine-instruments = {path="../audio-engine-instruments"}
audio-engine-tracker = {path="../audio-engine-tracker"}
audio-engine-tracker-songs = {path="../audio-engine-tracker-songs"}

ndarray = {version="*"}
video-rs = {version="0.5.0", features=["ndarray"]}