[package]
name = "audio-engine-instrument-bowed-string"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="audio_engine_instrument_bowed_string"
path="src/lib.rs"

[dependencies]
audio-engine-common = {path="../audio-engine-common"}
audio-engine-notes = {path="../audio-engine-notes"}

