[package]
name = "audio-engine-instruments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="audio_engine_instruments"
path="src/lib.rs"

[dependencies]
cpal = "*"
audio-engine-common = {path="../audio-engine-common"}
audio-engine-sequencer = {path="../audio-engine-sequencer"}
audio-engine-fm = {path="../audio-engine-fm"}
audio-engine-sample = {path="../audio-engine-sample"}

