[package]
name = "audio-engine-instruments"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="audio_engine_instruments"
path="src/lib.rs"

[dependencies]
cpal = "*"
audio-engine-common = {path="../audio-engine-common"}
audio-engine-sequencer = {path="../audio-engine-sequencer"}
audio-engine-instrument-bowed-string = {path="../audio-engine-instrument-bowed-string"}
audio-engine-instrument-fm = {path="../audio-engine-instrument-fm"}
audio-engine-instrument-piano = {path="../audio-engine-instrument-piano"}
audio-engine-instrument-sample = {path="../audio-engine-instrument-sample"}

