[package]
name = "audio-engine-midinous-songs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-engine-midinous = {path="../audio-engine-midinous"}
audio-engine-notes = {path="../audio-engine-notes"}
audio-engine-instruments = {path="../audio-engine-instruments"}