[package]
name = "audio-engine-sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-engine-common = {path="../audio-engine-common"}
audio-engine-fm = {path="../audio-engine-fm"}
audio-engine-sample = {path="../audio-engine-sample"}
