[package]
name = "audio-engine-sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-engine-common = {path="../audio-engine-common"}
audio-engine-instrument-fm = {path="../audio-engine-instrument-fm"}
audio-engine-instrument-sample = {path="../audio-engine-instrument-sample"}
