[package]
name = "audio-engine-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-engine-common = {path="../audio-engine-common"}
audio-engine-fm = {path="../audio-engine-fm"}
audio-engine-sample = {path="../audio-engine-sample"}
audio-engine-sequencer = {path="../audio-engine-sequencer"}
audio-engine-player = {path="../audio-engine-player"}
audio-engine-notes = {path="../audio-engine-notes"}

audio-engine-instruments = {path="../audio-engine-instruments"}

cpal = "*"
hex = "*"