[package]
name = "sample2fm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
audio-engine-common={path="../../audio-engine-common"}
audio-engine-notes={path="../../audio-engine-notes"}
audio-engine-sequencer={path="../../audio-engine-sequencer"}
audio-engine-instrument-fm={path="../../audio-engine-instrument-fm"}
audio-engine-instruments={path="../../audio-engine-instruments"}
